[package]
name = "point-cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "point_cloud"

[lib]
path = "src/lib.rs"
name = "point_cloud_lib"
crate-type = ["cdylib", "rlib"]

workspace = { members = ["point-converter"] }

[dependencies]
wgpu = "0.19.3"
winit = "0.29.15"
egui = "0.26.2"
egui-wgpu = "0.26.2"
egui-winit = { version = "0.26.2", default-features = false }
log = "0.4.21"
env_logger = "0.11.3"
cfg-if = "1.0.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
glam = { version = "0.26.0", features = ["bytemuck"] }
point-converter = { path = "point-converter" }
las = "0.8.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
web-sys = { version = "0.3.69", features = ["Window", "Performance"] }
