[package]
name = "point-cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "point_cloud"

[lib]
path = "src/lib.rs"
name = "point_cloud_lib"
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["bounding-volume", "point-converter", "thread-pool"]

[dependencies]
wgpu = "0.19.3"
winit = "0.29.15"
web-time = "1.1.0"
egui = "0.27.0"
egui-wgpu = "0.27.0"
egui-winit = { version = "0.27.0", default-features = false }
bevy_app = "0.13.0"
bevy_ecs = "0.13.0"
log = "0.4.21"
env_logger = "0.11.3"
cfg-if = "1.0.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
glam = { version = "0.27.0", features = ["bytemuck"] }
flume = "0.11.0"
parking_lot = "0.12.2"
itertools = "0.12.1"
caches = "0.2.8"
rustc-hash = "1.1.0"
thousands = "0.2.0"
bytesize = "1.3.0"
bounding-volume = { path = "bounding-volume" }
thread-pool = { path = "thread-pool" }
point-converter = { path = "point-converter" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"
rfd = "0.14.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
web-sys = { version = "0.3.69", features = ["Window", "Performance", "FileSystemDirectoryHandle", "FileSystemFileHandle", "File"] }
js-sys = "0.3.69"
