[package]
name = "thread-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.11.0"
log = "0.4.21"
env_logger = "0.11.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"