[package]
name = "thread-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.11.0"
log = "0.4.21"
env_logger = "0.11.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
futures = "0.3.30"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
web-sys = { version = "0.3.69", features = ["Worker", "WorkerType", "WorkerOptions", "MessageEvent", "Blob", "Url"] }
js-sys = "0.3.69"